# mirror-cwi-stdwin

./: .gitignore  ANNOUNCE  BETAFILES  Makefile.in  README  configure  configure.in
Appls/: Makefile.in  README
Appls/bed/: Makefile  bed.c  bed.h  file.c  fmenu.c  menu.h  mmenu.c  mouse.c  opmenu.c
Appls/dpv/: CHANGES  Make.conf  README  To.do  choose.c  dpv.c  dpv.h  dpvcontrol.c  dpvdoc.h  dpvfonts.c  dpvfunny.c  dpvmachine.c  dpvmachine.h  dpvoutput.c  dpvoutput.h  dpvparse.c  dpvrestart.c  funnyproto  makefunny  r3symbol  symbol  symbola  trans
Appls/klok/: Makefile.in  bsdsetdate.c  klok.c
Appls/metaclock/: bbc.c  hema.c  metaclock.c  metaclock.h
Appls/miniedit/: Makefile.in  miniedit.c  regexp.c  regexp.h  regsub.c
Appls/repeat/: repeat.c
Appls/test/: Make.conf  To.do  bits.c  bsdsetdate.c  charset.c  dklok.c  faced.c  hello.c  klok.c  magic.c  multiwin.c  sevenseg.h  test0.c  test1.c  test2.c  test3.c  test4.c  test5.c  testlocalmenus.c  testpollevent.c  tetris.c  thand.c  vtdemo.c
Appls/tetris/: tetris.c
Appls/vtest/: dummyserial.c  vtest.c
Doc/: ABOUT  README  WHATSNEW  paper.ms  seldoc.ms  vtrmdoc.ms
Doc/man/: dpv.man  editwin.man  glob.3  qview.man  textedit.man  ubr.man  vt.man  (+1 more)
H/: _ARGS.h  editwin.h  endian.h  filedefs.h  lists.h  patchlevel.h  sigtype.h  stdevent.h  stdwconf.h  stdwin.h  stdwtext.h  string.h  style.h  tilist.h  tools.h  vt.h  vtrm.h  vtserial.h  winreq.h
Packs/: Makefile.in
Ports/: Makefile.in
Tools/: byteswap.c  dirent.h  endian.c  getopt.c  glob.c  lprintf.c  memcpy.c  monocase.c  oldglob.c  strdup.c
(+92 files in other folders)
